<resources>
  <string name="app_name">AudioPlayer</string>
  <string name="main_fragment_toolbar_title">Плейлисты</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="authorized_title">Требуется авторизация</string>
  <string name="authorized_subtitle">Для просмотра страницы пользователя требуется авторизация</string>
  <string name="authorize_enter">Войти</string>
  <string name="authorize_registration">Регистрация</string>
  <string name="menu_library">Library</string>
  <string name="menu_create">Create</string>
  <string name="menu_profile">Profile</string>
  <string name="authorize">Авторизация</string>
  <string name="create_fragment_label">Create</string>
  <string name="holder_fragment_label">Профиль пользователя</string>
</resources>