<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/audio_list_fragment">

  <fragment
      android:id="@+id/audio_list_fragment"
      android:name="com.adtarassov.audioplayer.ui.sreen.audiolist.AudioListFragment"
      android:label="@string/menu_library"
      tools:layout="@layout/fragment_audio_list">
    <argument
        android:name="audio_list_type"
        android:defaultValue="0"
        app:argType="integer" />
    <action
        android:id="@+id/action_audio_list_fragment_to_fragmentHolder"
        app:destination="@id/fragment_holder" />
  </fragment>

  <fragment
      android:id="@+id/profile_fragment"
      android:name="com.adtarassov.audioplayer.ui.sreen.profile.ProfileFragment"
      android:label="@string/menu_profile"
      tools:layout="@layout/fragment_profile">
    <action
        android:id="@+id/action_profile_fragment_to_authorizationFragment"
        app:destination="@id/authorization_fragment" />
  </fragment>

  <dialog
      android:id="@+id/authorization_fragment"
      android:name="com.adtarassov.audioplayer.ui.sreen.authorization.AuthorizationFragment"
      android:label="fragment_authorization"
      tools:layout="@layout/fragment_authorization">
    <argument
        android:name="auth_type"
        android:defaultValue="0"
        app:argType="integer" />
  </dialog>

  <fragment
      android:id="@+id/voice_fragment"
      android:name="com.adtarassov.audioplayer.ui.sreen.voice.VoiceFragment"
      android:label="@string/create_fragment_label"
      tools:layout="@layout/fragment_voice" />

  <fragment
      android:id="@+id/fragment_holder"
      android:name="com.adtarassov.audioplayer.ui.sreen.profile.FragmentHolder"
      android:label="@string/holder_fragment_label"
      tools:layout="@layout/fragment_profile" >
    <argument
        android:name="audio_list_type"
        android:defaultValue="1"
        app:argType="integer" />
    <argument
        android:name="profile_type"
        android:defaultValue="1"
        app:argType="integer" />
    <argument
        android:name="user_account_name_key"
        android:defaultValue=""
        app:argType="string" />
  </fragment>


</navigation>