<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    >

  <ProgressBar
      android:id="@+id/progress_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:indeterminateTint="@color/main"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <LinearLayout
      android:id="@+id/authorization_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:gravity="center"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorized_title"
        android:textColor="@color/main"
        android:textSize="21sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/authorized_subtitle"
        android:textAlignment="center"
        android:textColor="@color/minor"
        android:textSize="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/auth_button"
          style="@style/MainButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/authorize_enter"
          android:layout_marginEnd="16dp"
          android:layout_weight="1"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/registration_button"
          style="@style/MainButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/authorize_registration"
          android:layout_weight="1"
          />

    </LinearLayout>



  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>